# helix-inference-os-v.01

./: .gitignore  .vercelignore  CLAIMS.md  NULL_RESULTS.md  README.md  REPRODUCING.md  THREAT_MODEL.md  helix.cmd  implementation_plan_01Sonnet  reporte-qa-helix-blueprint.md  vercel.json
benchmarks/: local_assistant_prompts.json  tool_call_cases.json
blueprints/: concurrent-research.json  cross-arch-migration.json  dba-data-engineering.json  frontend-factory.json  hybrid-research.json  legal-research.json  meta-compiler-dag.json  meta-microsite-real-cached.json  meta-microsite.json  resilient-pipeline.json
crates/helix-merkle-dag/: Cargo.toml  pyproject.toml
crates/helix-merkle-dag/src/: lib.rs
crates/helix-state-core/: Cargo.toml
crates/helix-state-core/src/: lib.rs  main.rs
crates/helix-state-server/: Cargo.toml
crates/helix-state-server/src/: main.rs
crates/helix-watch/: Cargo.toml  README.md
crates/helix-watch/src/: main.rs
datasets/: legal_ar_template.jsonl
docs/: agent-framework-showcase.md  agent-memory-comparison.md  agentmemory-airllm-integration.md  claims-matrix.md  finetune-colab.md  hard-anchors-semantic-dna.md  hardware-followup.md  helix-project-stack-summary.txt  hmem-wiring-v0.md  inference-os-architecture.md  launch-post.md  local-session-core-v0.md  mail-to-josh.md  microsite-ux-research.md  model-benchmarking.md  multimodel-hypervisor-v0.md  project-context.md  provider-model-audit.md  provider-polygraph.md  reddit-response-notes.md  session-core-v1-zero-copy.md  session-handoff-local-demo.md  session-os-reliability-gauntlet.md  stress-missions-v1.md  technical-report.md  unified-memory-story.md  zamba2-local-research.md
evidence/: README.md  index.json
finetune/: __init__.py  job_utils.py  merge_peft_adapter.py  prepare_job_bundle.py  run_job.py  train_qlora_trl.py  train_qlora_unsloth.py  validate_dataset.py
helix-kv/: README.md  pyproject.toml
helix-kv/tests/: test_public_api.py
helix_kv/: __init__.py  _helix_merkle_dag.pyd.bak-pre-hard-anchors  adaptive.py  asymmetric.py  benchmark.py  cache.py  cli.py  config.py  export_proof.py  ipc_state_server.py  layer_bridge.py  memory_catalog.py  memory_gc.py  merkle_dag.py  policy.py  quantizer.py  rotation.py  rust_session.py  selective.py  semantic_router.py  session.py  session_os.py  torch_quant.py  transformers_cache.py
schemas/: helix-verification-v0.schema.json
scripts/: run-local-backend.ps1  run-local-frontend.ps1  start-local-demo.ps1
tests/: conftest.py  test_active_memory_ab_trial.py  test_adversarial.py  test_agent_hypervisor.py  test_agent_memory.py  test_agent_memory_evidence.py  test_api_assistants.py  test_api_research.py  test_architectural_recursion_audit.py  test_assistants.py  test_benchmark_os.py  test_blueprint_demo.py  test_branch_pruning_forensics_suite.py  test_cdna.py  test_cli_smoke.py  test_cloud_amnesia_derby.py  test_finetune_jobs.py  (+64 more)
(+2171 files in other folders)
