[package]
name = "helix-merkle-dag"
version = "0.1.0"
edition = "2021"
description = "Lock-free MerkleDAG for HeliX Inference OS — PyO3 bindings"

[lib]
name = "_helix_merkle_dag"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"], optional = true }
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
serde_json = "1.0"
