[package]
name = "helix-state-server"
version = "0.1.0"
edition = "2021"
description = "Tokio-based StateServer for HeliX Inference OS — replaces Python asyncio server"

[[bin]]
name = "helix-state-server"
path = "src/main.rs"

[dependencies]
bincode = "1.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ed25519-dalek = "2"
hex = "0.4"
parking_lot = "0.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
zstd = { version = "0.13", default-features = false }
