[package]
name = "helix-watch"
version = "0.1.0"
edition = "2021"
description = "Lightweight Ratatui viewer for HeliX hybrid-memory receipts"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28"
flate2 = "1.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
